  that retrieves candles by symbols and start\stop DateTime. See documentation. 
  - Add the `dxf_tns_data_retrieving_sample` that demonstrates how to use `TimeAndSaleDataConnection`
  It is possible to subscribe to regional TnS by specifying, for example, the AAPL&Q symbol. 
  In this case, the service will return composite (Scope = Composite !) TnS with the TimeAndSale (not TimeAndSale&Q) record type and the AAPL&Q symbol (like a candle)  

Version 8.3.0
* [DXFC-254] The amount of memory used to store the symbols required for a subscription has been reduced by several times.
* [DXFC-238] Added the ability to set PriceLevelBook symbol or orders sources. Added the new methods:
  - `IDxPriceLevelBook.SetSymbol(string newSymbol)`
  - `IDxPriceLevelBook.SetSources(string[] newSources)`
  - `IDxPriceLevelBook.AddSymbols(params CandleSymbol[] symbols)`
  
  See documentation.
* [DXFC-255] Added a simple way to get data from CandleWebService.
  - Added the `CandleDataConnection` class with method 
  `Task<Dictionary<CandleSymbol, List<IDxCandle>>> GetCandleData(List<CandleSymbol> symbols, DateTime fromTime, DateTime toTime, CancellationToken cancellationToken)` 
  that retrieves candles by symbols and start\stop DateTime. See documentation.
  - Add the `dxf_candle_data_retrieving_sample` that demonstrates how to use `CandleDataConnection`
* [Deprecated] These classes, enums, interfaces, delegates and methods are deprecated and will be removed in 9.0.0 version:
  - DXFeedSymbolsUpdateEventArgs
  - OnEndpointClosingEventHandler
  - IDXEndpoint, DXEndpoint, IDXFeed, DXFeed
  - IDXFeedEventListener, IDxOrderViewListener, DXFeedEventHandler
  - DXFeedSymbolsUpdateEventHandler, DXFeedSubscriptionClosedEventHandler
  - IDXFeedSubscription, IDXFeedTimeSeriesSubscription, DXFeedSubscription, DXFeedTimeSeriesSubscription
  - CreateOrderViewSubscription, OrderViewSubscription
  - DXFeedLastingEventsCollector, LastingEventsCollector, DXFeedSnapshotCollector
  