@@ -114,9 +114,22 @@ namespace com.dxfeed.native
                 }
                 catch (WebException e)
                 {
-#if DEBUG
-                    Debug.WriteLine(e);
-#endif
+                    var response = e.Response as HttpWebResponse;
+
+                    if (response == null) throw;
+                    
+                    if (response.StatusCode != HttpStatusCode.BadRequest) throw;
+                        
+                    using (var stream = response.GetResponseStream())
+                    {
+                        if (stream == null) throw;
+                                
+                        using (var reader = new StreamReader(stream, Encoding.ASCII))
+                        {
+                            var line = await reader.ReadLineAsync();
+                            throw new WebException(line, e);
+                        }
+                    }
                 }
 
                 return result;
